cmake_minimum_required(VERSION 3.15)
project(algorithm_cpp CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# 各算法分类子目录（后续按需添加实现后再 add_subdirectory）
# add_subdirectory(sort)
# add_subdirectory(dp)
# add_subdirectory(backtrack)
# add_subdirectory(graph)
# add_subdirectory(tree)
